# scrcpium

./: .gitignore  biome.json  package.json  pyproject.toml  start.sh  tailwind.config.js  tsconfig.json
scrcpium/: app.py
scrcpium/boot/: scrcpy.py
scrcpium/routers/: devices.py
scrcpium/schemas/: device.py
scrcpium/shared/: connection_manager.py
static/: index.html
web/: app.tsx  index.html  store.ts  vite.config.ts
web/codec/: h26x_parser.spec.ts  h26x_parser.ts  index.ts  utils.spec.ts  utils.ts
web/components/: ControlPanel.tsx  Screen.tsx
web/connections/: index.ts
web/models/: Codec.ts  Connection.ts
web/types/: index.d.ts
